# muset

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  environment.yaml  generate_fof  produce_fof  test_utg_len.fa  unit_test_fof.txt
.github/workflows/: build_and_upload_conda_packages.yaml  update-bioconda.yml
.temp_files/build_graph_431a56ae-57e8-4e06-9f32-32917fd37a0b/: result.0  result.1  result.10  result.11  result.12  result.13  result.14  result.15  result.16  result.17  result.18  result.19  result.2  result.20  result.21  result.24  result.25  result.26  result.27  result.28  result.30  result.31  result.32  result.33  result.34  result.4  result.45  result.46  result.47  result.48  result.5  result.6  result.67  result.68  result.69  result.8  result.9
.temp_files/build_graph_c664c5a5-340a-406b-b3b3-8b6bce411197/: bucket.1  bucket.10  bucket.1000  bucket.1007  bucket.101  bucket.1016  bucket.103  bucket.106  bucket.108  bucket.11  bucket.112  bucket.113  bucket.115  bucket.119  bucket.121  bucket.124  bucket.125  bucket.126  bucket.128  bucket.131  bucket.134  bucket.14  bucket.140  bucket.142  bucket.147  bucket.15  bucket.150  bucket.151  bucket.163  bucket.165  bucket.166  bucket.170  bucket.171  bucket.177  bucket.178  bucket.179  bucket.18  bucket.182  bucket.183  bucket.187  (+270 more)
cmake/: TurboPFor-Integer-Compression.cmake  gatb-core-stripped.cmake  kff-cpp-api.cmake  kmtricks.cmake  lz4.cmake  spdlog.cmake  xxHash.cmake
conda/muset/: build.sh  meta.yaml
include/kmat_tools/: aggregator.h  cli.h  cmd.h  config.h.in  matrix.h  matrix_writer.h  task.h  utils.h
include/kmat_tools/cli/: cli_common.h  convert.h  diff.h  fafmt.h  fasta.h  filter.h  merge.h  reverse.h  select.h  unitig.h
include/kmat_tools/cmd/: cmd_common.h  convert.h  diff.h  fafmt.h  fasta.h  filter.h  merge.h  reverse.h  select.h  unitig.h
include/kmtricks/: config.h.in  howde_utils.hpp  task_scheduler.hpp
include/kmtricks/cmd/: infos.hpp
include/kmtricks/gatb/: sorting_count.hpp
out_test/kmer_matrix/: options.txt
output/: build_infos.txt  options.txt  run_infos.txt  unitig_matrix  unitigs.fa  unitigs_filtered_sequential.fa
output/config_gatb/: gatb.config
output/matrices/: matrix_1.count.lz4  matrix_3.count.lz4
output/superkmers/D1/: SuperKmerBinInfoFile
output/superkmers/D10/: SuperKmerBinInfoFile
output/superkmers/D2/: SuperKmerBinInfoFile
output/superkmers/D3/: SuperKmerBinInfoFile
output/superkmers/D4/: SuperKmerBinInfoFile
output/superkmers/D5/: SuperKmerBinInfoFile
output/superkmers/D6/: SuperKmerBinInfoFile
output/superkmers/D7/: SuperKmerBinInfoFile
output/superkmers/D8/: SuperKmerBinInfoFile
output/superkmers/D9/: SuperKmerBinInfoFile
reproducibility/: README.md
scripts/: GITHUB_ACTIONS_SETUP.md  README.md  generate_fof  update_bioconda.sh
singularity/: Singularity.def
src/: cli.cpp  cli.h  config.h.in  km_convert.cpp  km_diff.cpp  km_fafmt.cpp  km_format_converter.cpp  km_ktfilter.cpp  km_merge.cpp  km_tools.cpp  km_unitig.cpp  kmat_cli.cpp  kmat_convert.cpp  kmat_diff.cpp  kmat_fafmt.cpp  kmat_fasta.cpp  kmat_filter.cpp  kmat_merge.cpp  kmat_reverse.cpp  kmat_select.cpp  kmat_tools.cpp  kmat_unitig.cpp  kmtricks.h  muset.cpp  muset_cli.cpp  muset_cli.h  muset_pa.cpp  muset_pa_cli.cpp  muset_pa_cli.h
test/out_test/: unitigs.fa
test/out_test/kmer_matrix/: options.txt  run_infos.txt
test/out_test/kmer_matrix/config_gatb/: gatb.config
test/out_test/kmer_matrix/matrices/: matrix_1.count.lz4  matrix_2.count.lz4
test/out_test/kmer_matrix/merge_infos/: partition0.merge_info  partition1.merge_info
test/out_test/kmer_matrix/partition_infos/: D1.pinfo
test/out_test/kmer_matrix/superkmers/D1/: SuperKmerBinInfoFile
test/out_test/kmer_matrix/superkmers/D10/: SuperKmerBinInfoFile
test/out_test/kmer_matrix/superkmers/D2/: SuperKmerBinInfoFile
test/out_test/kmer_matrix/superkmers/D3/: SuperKmerBinInfoFile
test/out_test/kmer_matrix/superkmers/D4/: SuperKmerBinInfoFile
test/out_test/kmer_matrix/superkmers/D5/: SuperKmerBinInfoFile
test/out_test/kmer_matrix/superkmers/D6/: SuperKmerBinInfoFile
test/out_test/kmer_matrix/superkmers/D7/: SuperKmerBinInfoFile
test/out_test/kmer_matrix/superkmers/D8/: SuperKmerBinInfoFile
test/out_test/kmer_matrix/superkmers/D9/: SuperKmerBinInfoFile
test/out_test2/: unitigs.abundance.mat  unitigs.fa
test/out_test2/kmer_matrix/: build_infos.txt  options.txt  run_infos.txt
test/out_test2/kmer_matrix/config_gatb/: gatb.config
test/out_test2/kmer_matrix/matrices/: matrix_0.count.lz4  matrix_3.count.lz4
test/out_test2/kmer_matrix/merge_infos/: partition2.merge_info  partition3.merge_info
test/out_test2/kmer_matrix/minimizers/: minimizers.0  minimizers.1  minimizers.2
test/out_test2/kmer_matrix/partition_infos/: D7.pinfo
test/out_test2/kmer_matrix/repartition_gatb/: repartition.minimRepart
test/out_test2/kmer_matrix/superkmers/D1/: SuperKmerBinInfoFile
test/out_test2/kmer_matrix/superkmers/D10/: SuperKmerBinInfoFile
test/out_test2/kmer_matrix/superkmers/D2/: SuperKmerBinInfoFile
test/out_test2/kmer_matrix/superkmers/D3/: SuperKmerBinInfoFile
test/out_test2/kmer_matrix/superkmers/D4/: SuperKmerBinInfoFile
test/out_test2/kmer_matrix/superkmers/D5/: SuperKmerBinInfoFile
test/out_test2/kmer_matrix/superkmers/D6/: SuperKmerBinInfoFile
test/out_test2/kmer_matrix/superkmers/D7/: SuperKmerBinInfoFile
test/out_test2/kmer_matrix/superkmers/D8/: SuperKmerBinInfoFile
test/out_test2/kmer_matrix/superkmers/D9/: SuperKmerBinInfoFile
unit_tests/: aggregator.cpp
unit_tests/test_data/: test1.fa  test2.fa
